# perf_rcsp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: ci.yml
code/src/: benchmark.cpp  convert.cpp  convert.h  dummy.h  example_graphs.cpp  example_graphs.h  graph.h  main.cpp  rcsp.cpp  rcsp.h  rcsp_boost_graph.cpp  rcsp_boost_graph.h  rcsp_graph.cpp  rcsp_graph.h  to_dot.cpp  util.h  vrp_model.h
code/test/: convert_test.cpp  dummy_test.cpp  equivalent_solutions_test.cpp  rcsp_test.cpp  state_operators_test.cpp
data/: benchmark01.json  benchmark_desktop.json  benchmark_faster.json  benchmark_faster2.json  benchmark_flipped_order.json  benchmark_laptop.json  benchmark_new_seed.json  benchmark_new_seed_and_domination_check_change.json  benchmark_new_seed_and_domination_check_change2.json  benchmark_new_seed_and_domination_check_change3.json  newer_computer_benchamrk.json
scripts/: visualize_laptop_perf.ipynb  visualize_perf.ipynb
